@@ -183,8 +183,8 @@ class WSComms {
 
         this.sniffer = sniffer;
 
-        const send_executor_rsp = ( rsp ) => {
-            const rawrsp = executor.packPayloadJSON( rsp );
+        const send_executor_rsp = ( coder, rsp ) => {
+            const rawrsp = executor.packPayload( coder, rsp );
 
             sniffer( info, rawrsp, false );
             ws.send( rawrsp );
@@ -223,12 +223,14 @@ class WSComms {
         };
 
         ws.onmessage = ( event ) => {
-            sniffer( info, event.data, true );
+            let rsp = event.data;
 
-            let rsp;
+            sniffer( info, rsp, true );
+
+            const coder = MessageCoder.detect( rsp );
 
             try {
-                rsp = ctx.msg_coder.decode( event.data );
+                rsp = coder.decode( rsp );
             } catch ( e ) {
                 // Ignore
                 return;
@@ -245,7 +247,7 @@ class WSComms {
                     executor.onEndpointRequest(
                         info,
                         rsp,
-                        send_executor_rsp
+                        ( rsp ) => send_executor_rsp( coder, rsp )
                     );
                 }
             }
