@@ -35,6 +35,7 @@ exports.FutoInError = common.FutoInError;
 exports.InterfaceInfo = require( '../InterfaceInfo' );
 exports.NativeIface = require( '../NativeIface' );
 exports.SpecTools = require( '../SpecTools' );
+exports.MessageCoder = require( '../MessageCoder' );
 
 exports.CacheFace = require( '../CacheFace' );
 exports.LogFace = require( '../LogFace' );
