@@ -344,8 +344,8 @@ exports.WSComms = class WSComms {
 
         this.sniffer = sniffer;
 
-        const send_executor_rsp = ( rsp ) => {
-            const rawrsp = executor.packPayloadJSON( rsp );
+        const send_executor_rsp = ( coder, rsp ) => {
+            const rawrsp = executor.packPayload( coder, rsp );
 
             sniffer( info, rawrsp, false );
             ws.send( rawrsp );
@@ -379,11 +379,13 @@ exports.WSComms = class WSComms {
         } );
 
         ws.on( 'message', ( event ) => {
-            sniffer( info, event.data, true );
-            let rsp;
+            let rsp = event.data;
+
+            sniffer( info, rsp, true );
+            const coder = MessageCoder.detect( rsp );
 
             try {
-                rsp = ctx.msg_coder.decode( event.data );
+                rsp = coder.decode( rsp );
             } catch ( e ) {
                 // Ignore
                 return;
@@ -402,7 +404,7 @@ exports.WSComms = class WSComms {
                     executor.onEndpointRequest(
                         info,
                         rsp,
-                        send_executor_rsp
+                        ( rsp ) => send_executor_rsp( coder, rsp )
                     );
                 }
             }
