@@ -89,7 +89,7 @@ Message coding formats:
 
 * JSON - default and mandatory
 * MessagePack (MPCK) - default for interfaces with `BinaryData` constraint
-* CBOR - also available, but shows 10-100x worse performance compared to MessagePack even with `borc` fork
+* CBOR - also available, but shows 10+x worse performance compared to MessagePack even with `borc` fork
 
 *Note: Invoker and Executor are platform/technology-neutral concepts. The implementation
 is already available in JS and PHP.*
